# ymm

./: .gitignore  CLAUDE.md  README.md  index.html  pyproject.toml  requirements.txt
.claude/agents/: capraz-kontrol.md  kvkk-denetci.md  rapor-yazici.md  risk-tarama.md
.claude/skills/tam-tasdik-raporu/: SKILL.md
.streamlit/: config.toml
config/: kolon_haritasi.yaml  kontrol_kurallari.yaml  risk_hesaplari.yaml
docs/: 00-ANALIZ.md  01-MIMARI.md  kararlar.md
docs/superpowers/plans/: 2026-07-06-ymm-tasdik-asistani.md
ornek_veri/: beyanname_ozet.json  mizan_2025.xlsx  senaryo_muk002.py  uret.py
src/ymm/: app.py  cli.py  modeller.py
src/ymm/db/: depo.py  kimlik_schema.sql  schema.sql
src/ymm/kontrol/: donem.py  kurallar.py  motor.py
src/ymm/llm/: gateway.py  istemler.py
src/ymm/maskeleme/: ayirici.py  dogrulayici.py
src/ymm/parsers/: mizan.py
src/ymm/parsers/beyanname/: gecici.py  kdv.py  kurumlar.py  muhtasar.py  ortak.py
src/ymm/rapor/: uretici.py
src/ymm/rapor/sablonlar/: bulgu_a_gecici_kv.j2  bulgu_a_genel.j2  bulgu_a_kdv_hasilat.j2  bulgu_a_muhsgk_ucret.j2  bulgu_b_100_kasa.j2  (+7 more)
src/ymm/risk/: seviye.py  tarayici.py
tests/: test_app.py  test_cli.py  test_depo.py  test_docx.py  test_donem.py  test_gateway.py  test_kontrol_entegrasyon.py  test_kontrol_gecici.py  test_kontrol_kdv.py  test_kontrol_muhtasar.py  test_kvkk.py  test_maskeleme.py  test_mizan_parser.py  test_parser_gecici.py  test_parser_kdv.py  test_parser_kurumlar.py  test_parser_muhtasar.py  test_rapor.py  test_risk_karsilastirma.py  test_risk_statik.py  yardimci_pdf.py
