[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ymm-asistan"
version = "0.1.0"
description = "YMM Tam Tasdik Raporu Asistani"
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "openpyxl",
    "xlrd",
    "pdfplumber",
    "typer",
    "rich",
    "jinja2",
    "python-docx",
    "pyyaml",
    "anthropic",
]

[project.optional-dependencies]
dev = ["pytest", "reportlab", "streamlit", "xlwt"]
ui = ["streamlit"]

[project.scripts]
ymm = "ymm.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
